[package]
name = "dedup"
version = "0.8.0"
authors = ["Ivan Shikhalev <https://bs.shikhalev.org/>"]
edition = "2018"
description = "Deduplicate files on local filesystem with hardlinks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["color", "derive"] }
byte-unit = "*"
termcolor = "*"
shellexpand = "*"
chrono = "*"
