[package]
name = "dedup"
version = "0.0.1"
authors = ["Ivan Shikhalev <https://bs.shikhalev.org/>"]
edition = "2018"
description = "Deduplicate files on local filesystem with hardlinks\nSee https://github.com/shikhalev/dedup"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/shikhalev/dedup"
homepage = "https://github.com/shikhalev/dedup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["color", "derive"] }
byte-unit = "*"
termcolor = "*"
shellexpand = "*"
chrono = "*"
crc64fast = "*"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
